--- a/index.html
+++ b/index.html
@@ -18,39 +18,5 @@
 </head>
 
 <body>
-    <div class="container-fluid border pt-3"
-        style="width:auto; max-width: 1600px; height:auto;min-height:750px;
-         background-image: url('Polygon1.png'); background-size: contain; background-repeat: no-repeat; background-position: bottom right; border-width: 5px!important; background-color: #f5f5f5;">
-        <div class="row">
-            <div class="col-12">
-                <img class="float-right" height="45
-                px" src="Dark.png" alt="" style="padding-right: 70px; margin-top: 10px;">
-            </div>+
-        </div>
-
-        <div class="row">
-            <div class="col-6" style="padding-top: 70px; margin-left: 100px;">
-                <h1 class="display-4 font-weight-bold">The Competition</h1>
-                <div class="row mt-5">
-                      <div class="col-6">
-                        <h2 class="font-weight-bold">Company1</h2>
-                        <h4 class="mt-3 font-weight-normal pr-1">Their review average 3.5, whereas we average 5 stars</h4>
-                      </div>
-                      <div class="col-6">
-                        <h2 class="font-weight-bold">Company2</h2>
-                        <h4 class="mt-3 font-weight-normal pr-1">Their review average 3.5, whereas we average 5 stars</h4>
-                      </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-6">
-                        <h2 class="font-weight-bold">Company3</h2>
-                        <h4 class="mt-3 font-weight-normal pr-1">Their review average 3.5, whereas we average 5 stars</h4>
-                      </div>
-                      <div class="col-6">
-                        <h2 class="font-weight-bold">Company4</h2>
-                        <h4 class="mt-3 font-weight-normal pr-1">Their review average 3.5, whereas we average 5 stars</h4>
-                      </div>
-                </div>
-            </div>
-        </div>
+    <h1>Halo</h1>
 </body>
